<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/filipzrnzevic"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_main_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_sub_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/radius_drawable_bg"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/envelope" />

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="#FFFFFF"
                    android:hint="Name"
                    android:padding="5dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#EEEEEE" />

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/padlock" />

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="#FFFFFF"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            layout="@layout/layout_progress"
            android:visibility="gone" />

        <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:background="@drawable/text_bg"
            android:textAlignment="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:autoLink="all"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/user_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:autoLink="all"
        android:gravity="center"
        android:text="@string/forget_pwd"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</RelativeLayout>