<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/filipzrnzevic"
    tools:context=".RegisterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_main_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_sub_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:id="@+id/new_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/radius_drawable_bg"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/new_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="#FFFFFF"
                    android:hint="name"
                    android:padding="5dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#EEEEEE" />

            <LinearLayout
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/new_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="#FFFFFF"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#EEEEEE" />

            <LinearLayout
                android:id="@+id/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/new_user_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="#FFFFFF"
                    android:hint="repeat password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            layout="@layout/layout_progress"
            android:visibility="gone" />

        <TextView
            android:id="@+id/new_user_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_input_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:paddingTop="2dp"
            android:paddingBottom="4dp"
            android:background="@drawable/text_bg"
            android:textAlignment="center"
            android:text="@string/register_box"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/new_user_cancel_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_user_register"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:paddingLeft="140dp"
            android:paddingRight="140dp"
            android:paddingTop="2dp"
            android:paddingBottom="4dp"
            android:background="@drawable/text_bg"
            android:textAlignment="center"
            android:text="@string/cancel_box"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>